fix tiny gap between rounded corners

--- a/src/main/webapp/style/tb.css
+++ b/src/main/webapp/style/tb.css
@@ -219,7 +219,7 @@ a:hover {
 .menu ul, menu ul {
 	font-family: verdana, arial, sans-serif;
 	font-weight: bold;
-	padding: .5em 0 0 0;
+	padding: .3em 0 0 0;
 	margin: 0;
 	list-style: none;
 	z-index:20000;
